kubernetes/core/authelia/config/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-wave: "100"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.bhamm-lab.com`)
      middlewares:
        - name: default-headers
      services:
        - name: authelia
          port: 80
          scheme: http
  tls:
    secretName: bhamm-lab-tls
